started work on contact section

--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@
 
     </section>
 
+    <section class="contact-container" id="contact">
+
+        <div class="contact-content">
+            <ul>
+
+            </ul>
+        </div>
+
+    </section>
+
     <section class="footer-container">
 
         <footer class="footer-content">
