--- a/index.html
+++ b/index.html
@@ -119,9 +119,28 @@
     <section class="contact-container" id="contact">
 
         <div class="contact-content">
-            <ul>
 
-            </ul>
+            <ul class="inline-list">
+                <li class="profile-link">
+                    <a href="https://www.linkedin.com/in/justinclaylane"><img class="logo" src="./static/img/logos/linkedin_logo.svg" alt="LinkedIn logo" /></a>
+                </li>
+                <li class="profile-link">
+                    <a href="https://github.com/jclane"><img class="logo" src="./static/img/logos/github_logo.svg" alt="GitHub logo" /></a>
+                </li>
+                <li class="profile-link">
+                    <a href="https://www.twitter.com/justin_lane"><img class="logo" src="./static/img/logos/twitter_logo.svg" alt="Twitter logo" /></a>
+                </li>
+                <li class="profile-link">
+                    <a href="https://mastodon.online/@jc"><img class="logo" src="./static/img/logos/mastodon_logo.svg" alt="Mastodon logo" /></a>
+                </li>
+                <li class="profile-link">
+                    <a href="https://www.facebook.com/justin.clay.lane"><img class="logo" src="./static/img/logos/facebook_logo.svg" alt="Facebook logo" /></a>
+                </li>
+                <li class="profile-link">
+                    <a href="https://www.instagram.com/j.c.lane/"><img class="logo" src="./static/img/logos/instagram_logo.svg" alt="Instagram logo" /></a>
+                </li>
+          </ul>
+
         </div>
 
     </section>
