started work on contact form

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <h1>You're Going to Hire Me.</h1>
 
-            <p>Hello, my name is [INSERT NAME] I'm a student at Code Lousville. In about 24 weeks I will have the skills and knowledge to be hired as a Junior Web Developer.</p>
+            <p>Hello, my name is Justin and I'm a student at Code Lousville. In about 24 weeks I will have the skills and knowledge to be hired as a Junior Web Developer.</p>
 
             <a href="#aboutme" class="btn">Learn More About Me</a>
 
@@ -120,25 +120,39 @@
 
         <div class="contact-content">
 
+            <h2>Contact</h2>
+            <h3>Want to ask me a question or collaborate on a project?</h3>
+
+            <form>
+
+            </form>
+
             <ul class="inline-list">
+
                 <li class="profile-link">
                     <a href="https://www.linkedin.com/in/justinclaylane"><img class="logo" src="./img/logos/linkedin_logo.svg" alt="LinkedIn logo" /></a>
                 </li>
+
                 <li class="profile-link">
                     <a href="https://github.com/jclane"><img class="logo" src="./img/logos/github_logo.svg" alt="GitHub logo" /></a>
                 </li>
+
                 <li class="profile-link">
                     <a href="https://www.twitter.com/justin_lane"><img class="logo" src="./img/logos/twitter_logo.svg" alt="Twitter logo" /></a>
                 </li>
+
                 <li class="profile-link">
                     <a href="https://mastodon.online/@jc"><img class="logo" src="./img/logos/mastodon_logo.svg" alt="Mastodon logo" /></a>
                 </li>
+
                 <li class="profile-link">
                     <a href="https://www.facebook.com/justin.clay.lane"><img class="logo" src="./img/logos/facebook_logo.svg" alt="Facebook logo" /></a>
                 </li>
+
                 <li class="profile-link">
                     <a href="https://www.instagram.com/j.c.lane/"><img class="logo" src="./img/logos/instagram_logo.svg" alt="Instagram logo" /></a>
                 </li>
+
           </ul>
 
         </div>
@@ -149,13 +163,11 @@
 
         <footer class="footer-content">
 
-            <p>&copy; 2022 Code Louisville. This website maintained by: [YOUR NAME HERE]</p>
+            <p>&copy; 2022 Code Louisville. This website maintained by: Justin Lane</p>
 
         </footer>
 
     </section>
-
-
 
     <script src="js/app.js"></script>
 
